[Shaunak] Added: Bookstore quickview component, authguard

--- a/src/app/component/dashboard/dashboard.component.html
+++ b/src/app/component/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
     <mat-toolbar-row>
         <div class="imgandtext" fxLayout="row" fxLayout.xs="row">
             <div>
-                <img class="book" src="../../../assets/images.png" alt="">
+                <img class="book" src="../../../assets/education (1).svg" alt="">
             </div>
             <div class="text">
                 <h2>Bookstore</h2>
@@ -25,3 +25,7 @@
 
     </mat-toolbar-row>
 </mat-toolbar>
+
+<div>
+    <router-outlet></router-outlet>
+</div>
