--- a/src/app/component/getallbooks/getallbooks.component.html
+++ b/src/app/component/getallbooks/getallbooks.component.html
@@ -2,7 +2,7 @@
 
     <div class="bookandCount">
         <span class="books">Books</span>
-        <span class="count">(128 items)</span>
+        <span class="count">({{countbooks}} items)</span> <!--we are just binding data using string interpolation between getallbooks.html and getaalbooks.ts --> 
     </div>
 
     <div class="sortbyrelevance">
@@ -19,9 +19,9 @@
 </div>
 
 <div  fxLayoutAlign="center center"  fxLayout="row wrap" fxLayoutGap="15px">
-    <div class="entirebook" *ngFor="let book of allbooks" fxLayout.sm="column">
+    <div class="entirebook" *ngFor="let book of allbooks | paginate: { itemsPerPage: 8, currentPage: page, totalItems:totalLength } " fxLayout.sm="column">
 
-        <div class="bookimg">
+        <div class="bookimg" (click)="quickview(book)" >  <!-- this (book) is coming from ngFor (let book) as we are storing aur bookname, author etc in book -->
             <img class="img1" src="../../../assets/Image 11@2x.png" alt="">
         </div>
 
@@ -32,7 +32,6 @@
          by {{book.author}}
         </div>
         <div class="rating" fxLayoutAlign="space-evenly center">
-            <!-- 4.5<mat-icon class="Star">star</mat-icon>-->
             4.5<img class="Star" src="../../../assets/star_outline_white_24dp.svg" alt="">
         </div>
 
@@ -45,9 +44,14 @@
                 Rs.{{book.discountPrice}}
             </div>
             <div class="originalprice">
-                <del> Rs.{{book.price}} </del>
+                <del> Rs.{{book.price}} </del> <!-- <del> tag is used to show the removal from document-->
             </div>
         </div>
 
     </div>
+
+    <div >
+        <pagination-controls class="text-center my-pagination" (pageChange)="page = $event"></pagination-controls>
+    </div>
+    
 </div>
