--- a/src/app/component/getallbooks/getallbooks.component.scss
+++ b/src/app/component/getallbooks/getallbooks.component.scss
@@ -95,3 +95,7 @@
     color: grey;
     margin-left: 5px;
   }
+  .my-pagination ::ng-deep .ngx-pagination .current {
+    background: brown;
+  }
+  
