[Shaunak] Added: modified getcart component with book details, api integration

--- a/src/app/component/dashboard/dashboard.component.html
+++ b/src/app/component/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="mattoolbar" fxLayoutAlign="center center">
     <mat-toolbar-row>
-        <div class="imgandtext" fxLayout="row" fxLayout.xs="row">
+        <div class="imgandtext" (click)="bookstore()" fxLayout="row" fxLayout.xs="row">
             <div>
                 <img class="book" src="../../../assets/education (1).svg" alt="">
             </div>
