--- a/src/app/component/dashboard/dashboard.component.scss
+++ b/src/app/component/dashboard/dashboard.component.scss
@@ -1,5 +1,6 @@
 .mattoolbar{
-  background-color: rgb(165, 42, 42);
+//   background-color: rgb(165, 42, 42);
+background-color: darkred;
    width: 100%;
    position: fixed;
    overflow:hidden;
@@ -14,6 +15,7 @@
     // border-radius: 20px;
     margin-left: 200px;
     border: none;
+    cursor: pointer;
     
 }
 .text{
@@ -51,10 +53,11 @@
 }
 .profileimg{
     margin-left: -2px;
+    // margin-top: 2px;
 
 }
 .cart{
-    margin-left: 60px;
+    margin-left: 40px;
     margin-top: 28px;
     cursor: pointer;
 }
