--- a/src/app/component/dashboard/dashboard.component.scss
+++ b/src/app/component/dashboard/dashboard.component.scss
@@ -69,3 +69,43 @@ p{
     opacity: 0.9;
     font-size: x-small;
 }
+.logoutbutton{
+    border: 1px solid darkred;
+    color: darkred;
+    text-align: center;
+    width: 170px;
+    // height: 50px;
+    border-radius: 4px;
+    margin-left: 15px;
+}
+.wishlistIcon{
+    // border: 1px solid yellow;
+    // margin-left: -10px;
+    // height: 10px;
+    // width: 10px;
+    
+}
+.wishlistbutton{
+    // border: 1px solid red;
+    text-align: start;
+    justify-content: space-evenly;
+   
+    
+}
+::ng-deep .mat-menu-panel.matmenu{
+    // border: 1px solid red;
+    width: 300px;
+    height: 175px;
+    position: relative;
+    left: 150px;
+    margin-top: -15px;
+    
+}
+.welcometext{
+    margin-left: 15px;
+
+}
+.logouttext{
+    margin-left: 15px;
+
+}
