--- a/src/app/component/quickview/quickview.component.html
+++ b/src/app/component/quickview/quickview.component.html
@@ -37,8 +37,8 @@
 
     </div>
 
-    <div class="bookdetailsdiv" fxLayout="column">
-        <div class="entirebook" fxLayout="column" fxLayout.sm="column">
+    <div class="bookdetailsdiv" fxLayout="column" fxLayout.xs="column" fxFlex.xs="95">
+        <div class="entirebook" fxLayout="column" fxLayout.sm="column"  >
     
             <div class="bookname">
                 {{bookdata.bookName}}
@@ -81,14 +81,53 @@
         <div class="overallrating">
             <div class="rate">
                 <p class="ratename">Overall Rating</p>
+                <div>
+                    <div class="star-widget">
+                        <input type="radio" name="rate" id="rate-5" [(ngModel)]="value" value="5"> <!-- this =value is coming from quickview.ts used inside addfeedback() inside rating: this.value-->
+                        <label for="rate-5" class="fa fa-star"></label>
+
+                        <input type="radio" name="rate" id="rate-4" [(ngModel)]="value" value="4">
+                        <label for="rate-4" class="fa fa-star"></label>
+
+                        <input type="radio" name="rate" id="rate-3" [(ngModel)]="value" value="3">
+                        <label for="rate-3" class="fa fa-star"></label>
+
+                        <input type="radio" name="rate" id="rate-2" [(ngModel)]="value" value="2">
+                        <label for="rate-2" class="fa fa-star"></label>
+
+                        <input type="radio" name="rate" id="rate-1" [(ngModel)]="value" value="1">
+                        <label for="rate-1" class="fa fa-star"></label>
+
+                    </div>
+                </div>
                
             </div>
             <div>
-                <input class="review" type="text" placeholder="Write your review">
+                <input [(ngModel)]="feedback" class="review" type="text" placeholder="Write your review">  <!--this =feedback is coming from quickview.ts used inside addfeedback() inside comment: this.feedback -->
             </div>
             <div fxLayoutAlign="end center">
-                <button class="submitbutton" mat-flat-button color="primary" >Submit</button>
+                <button class="submitbutton" (click)="addfeedback()" mat-flat-button color="primary" >Submit</button>
             </div>
+        </div>
+
+        <div class="userfeedback" *ngFor="let feedback of feedbackArray" fxLayout="column wrap" fxLayoutAlign="start start" fxLayoutGap="10px">
+            <div >
+                <div fxLayoutGap="10px">
+                    <button mat-mini-fab class="shortname">{{getShortName (feedback.user_id.fullName)}} </button>
+                    <span class="feedbackname">{{feedback.user_id.fullName}} </span>
+                </div>
+
+                <div>
+                    <span class="feedbackrating">{{feedback.rating}} </span>
+
+                </div>
+
+                <div>
+                    <span class="feedbackcomment">{{feedback.comment}} </span>
+
+                </div>
+            </div>
+
         </div>
 
 
