--- a/src/app/component/quickview/quickview.component.scss
+++ b/src/app/component/quickview/quickview.component.scss
@@ -58,6 +58,8 @@
 
 .cartandwishlistbutton{
     margin-top: 20px;
+    // position: sticky;
+    
 
 }
 .addtobag{
@@ -157,11 +159,13 @@
 
 }
 .overallrating{
+    // border: 1px solid red;
     background: whitesmoke;
-   
+    
 
 }
 .rate{
+    // border: 1px solid yellow;
     margin-left: 15px;
 
 }
@@ -190,4 +194,66 @@
     opacity: 0.9;
     
 
+}
+
+.userfeedback{
+    // border: 1px solid gainsboro;
+    margin-top: 20px;
+    margin-left: 5px;
+}
+.shortname{
+    // border: 1px solid green;
+    background-color: transparent;
+    color: gray;
+    height: 35px;
+    width: 35px;
+    box-shadow: none;
+    border: 1px solid gainsboro;
+    padding: 0px;
+}
+.feedbackname {
+    // border: 1px solid red;
+    opacity: 1;
+    font-weight: 500;
+    font-size: 20px;
+
+}
+.feedbackrating{
+
+}
+.feedbackcomment{
+    color: #707070;
+    opacity: 1;
+
+}
+
+.overallrating .star-widget input{
+    display: none;
+}
+.star-widget{
+    border: 1px solid green;
+    height: 30px;
+    margin-top: -15px;
+    margin-right: 400px;
+    // background-color: white;
+}
+.star-widget label{
+    // border: 1px solid red;
+    font-size: 20px;
+    color: #444;
+    padding: 8px;
+    float: right;
+    transition: all 0.2 ease;
+}
+input:not(:checked) ~ label:hover,
+input:not(:checked) ~ label:hover ~ label{
+    color:  #fd4;
+}
+input:checked ~ label{
+    color: #fd4;
+}
+
+input#rate-5:checked ~ label{
+    color: #fe7;
+    text-shadow: 0 0 20px #fe7;
 }
