--- a/src/app/component/signup/signup.component.html
+++ b/src/app/component/signup/signup.component.html
@@ -22,6 +22,18 @@
         </div>
         <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
             <div class="form">
+                <div style=" margin-top: -30px;">
+                    <mat-form-field  style="height: 38px;">
+                        <mat-label>Select an option</mat-label>
+                        <mat-select formControlName="selectoption" disableRipple>
+                          <mat-option value="1">User</mat-option>
+                          <mat-option value="2">Admin</mat-option>
+                          <!-- <mat-option value="3">Option 3</mat-option> -->   
+                        </mat-select>
+                      </mat-form-field>
+                </div>
+
+                
                 <div class="fullname">
                     <div>
                         <mat-label>Full Name</mat-label>
