[Shaunak] Added: Bookstore admin add book open dialog box

--- a/src/app/component/admin/admin.component.html
+++ b/src/app/component/admin/admin.component.html
@@ -30,4 +30,8 @@
         </tr>
     </table>
 
+    <div class="addbookbutton" >
+        <button (click)="AddBook()" class="addbutton">Add book</button>
+    </div>
+
 </div>
