--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -58,7 +58,7 @@
                         <div>
                             <mat-form-field appearance="outline">
 
-                                <input type="text" formControlName="password" matInput placeholder="">
+                                <input type="password" formControlName="password" matInput placeholder="">
                                 <mat-error>Enter a password</mat-error>
                             </mat-form-field>
 
