--- a/src/app/component/admin-addandupdate/admin-addandupdate.component.html
+++ b/src/app/component/admin-addandupdate/admin-addandupdate.component.html
@@ -1,8 +1,8 @@
 <div class="section" fxLayout="column" fxLayoutAlign="center center">
 <mat-card class="matcard2" fxLayout="column" fxLayoutAlign="center center" fxLayout.xs="column" fxLayout.sm="column" fxFlex.xs="95" fxFlex.sm="60">
     <div class="addandupdatetext" fxLayout="row">
-        <h2>Add book</h2>
-        <h2>Update book</h2>
+        <h2 >Add book</h2>
+        <!-- <h2>Update book</h2> -->
     </div>
 
     <div class="formcontainer">
@@ -99,8 +99,8 @@
             </div>
 
             <div>
-                <button class="addbutton">Add book</button>
-                <button class="addbutton">Update book</button>
+                <button  class="addbutton">Add book</button>
+                <!-- <button  class="addbutton">Update book</button> -->
             </div>
 
 
