[Shaunak] Added: User fullName details on profile button

--- a/src/app/component/dashboard/dashboard.component.html
+++ b/src/app/component/dashboard/dashboard.component.html
@@ -23,7 +23,7 @@
 
             <mat-menu class="matmenu" #menu="matMenu">
                 <div fxLayout="column" fxLayoutGap="3px">
-                    <h3 class="welcometext">Welcome</h3>
+                    <h3 class="welcometext">Welcome, {{fullName}}</h3>
                     <h5 class="logouttext">To Logout account</h5>
 
                 </div>
