--- a/src/app/component/getcart/getcart.component.html
+++ b/src/app/component/getcart/getcart.component.html
@@ -128,8 +128,8 @@
                         </div>
                         <div>
 
-                            <mat-form-field appearance="outline">
-                                <input matInput type="text" formControlName="address" placeholder="">
+                            <mat-form-field>
+                                <textarea matInput type="text" formControlName="address" placeholder=""></textarea>
                                 <!-- <textarea type="text" formControlName="address" placeholder=""></textarea>  -->
                                 <mat-error>Enter address</mat-error>
                             </mat-form-field>
