--- a/src/app/component/quickview/quickview.component.scss
+++ b/src/app/component/quickview/quickview.component.scss
@@ -231,7 +231,7 @@
     display: none;
 }
 .star-widget{
-    border: 1px solid green;
+    // border: 1px solid green;
     height: 30px;
     margin-top: -15px;
     margin-right: 400px;
