--- a/src/app/component/admin-addandupdate/admin-addandupdate.component.html
+++ b/src/app/component/admin-addandupdate/admin-addandupdate.component.html
@@ -1,120 +1,121 @@
 <div class="section" fxLayout="column" fxLayoutAlign="center center">
-<mat-card class="matcard2" fxLayout="column" fxLayoutAlign="center center" fxLayout.xs="column" fxLayout.sm="column" fxFlex.xs="95" fxFlex.sm="60">
-    <div class="addandupdatetext" fxLayout="row">
-        <h2 >Add book</h2>
-        <!-- <h2>Update book</h2> -->
-    </div>
+    <mat-card class="matcard2" fxLayout="column" fxLayoutAlign="center center" fxLayout.xs="column" fxLayout.sm="column"
+        fxFlex.xs="95" fxFlex.sm="60">
+        <div class="addandupdatetext" fxLayout="row">
+            <h2 *ngIf="data.isAddBook" >Add book</h2> <!--this data. is coming from admin.component.ts from Addbook() open dialog box  from data:{isAddBook:true}-->
+            <h2 *ngIf="!data.isAddBook" >Update book</h2>
+        </div>
 
-    <div class="formcontainer">
-    <form [formGroup]="addandupdateForm" (ngSubmit)="addandupdate()">
-        <div class="form" fxLayout="column" >
-            <div class="bookname">
-                <div class="label">
-                    <mat-label>Book Name</mat-label>
+        <div class="formcontainer">
+            <form [formGroup]="addandupdateForm" (ngSubmit)="addandupdate()">
+                <div class="form" fxLayout="column">
+                    <div class="bookname">
+                        <div class="label">
+                            <mat-label>Book Name</mat-label>
+                        </div>
+                        <div>
+                            <mat-form-field appearance="outline">
+
+                                <input type="text" formControlName="bookname" matInput placeholder="">
+                                <mat-error>Enter a book name</mat-error>
+                            </mat-form-field>
+
+                        </div>
+
+                    </div>
+
+                    <div class="bookname">
+                        <div class="label">
+                            <mat-label>Author</mat-label>
+                        </div>
+                        <div>
+                            <mat-form-field appearance="outline">
+
+                                <input type="text" formControlName="author" matInput placeholder="">
+                                <mat-error>Enter a author name</mat-error>
+                            </mat-form-field>
+
+                        </div>
+
+                    </div>
+
+                    <div class="bookname">
+                        <div class="label">
+                            <mat-label>Description</mat-label>
+                        </div>
+                        <div>
+                            <mat-form-field appearance="outline">
+
+                                <input type="text" formControlName="description" matInput placeholder="">
+                                <mat-error>Enter a description</mat-error>
+                            </mat-form-field>
+
+                        </div>
+
+                    </div>
+
+                    <div class="bookname">
+                        <div class="label">
+                            <mat-label>Quantity</mat-label>
+                        </div>
+                        <div>
+                            <mat-form-field appearance="outline">
+
+                                <input type="text" formControlName="quantity" matInput placeholder="">
+                                <mat-error>Enter a quantity</mat-error>
+                            </mat-form-field>
+
+                        </div>
+
+                    </div>
+
+                    <div class="bookname">
+                        <div class="label">
+                            <mat-label>Price</mat-label>
+                        </div>
+                        <div>
+                            <mat-form-field appearance="outline">
+
+                                <input type="text" formControlName="price" matInput placeholder="">
+                                <mat-error>Enter a price</mat-error>
+                            </mat-form-field>
+
+                        </div>
+
+                    </div>
+
+                    <div class="bookname">
+                        <div class="label">
+                            <mat-label>Discount Price</mat-label>
+                        </div>
+                        <div>
+                            <mat-form-field appearance="outline">
+
+                                <input type="text" formControlName="discountprice" matInput placeholder="">
+                                <mat-error>Enter a discount price</mat-error>
+                            </mat-form-field>
+
+                        </div>
+
+                    </div>
+
+                    <div>
+                        <button  *ngIf="data?.isAddBook" class="addbutton">Add book</button> <!-- here after data we have to use ? because without using this our book will not be added  ,this data. is coming from admin.component.ts from Addbook() open dialog box  from data:{isAddBook:true}-->
+                        <button  *ngIf="!data?.isAddBook" class="addbutton">Update book</button>
+                    </div>
+
+
+
+
+
+
+
+
+
+
                 </div>
-                <div>
-                    <mat-form-field appearance="outline">
-
-                        <input type="text" formControlName="bookname" matInput placeholder="">
-                        <mat-error>Enter a book name</mat-error>
-                    </mat-form-field>
-
-                </div>
-
-            </div>
-
-            <div class="bookname">
-                <div class="label">
-                    <mat-label>Author</mat-label>
-                </div>
-                <div>
-                    <mat-form-field appearance="outline">
-
-                        <input type="text" formControlName="author" matInput placeholder="">
-                        <mat-error>Enter a author name</mat-error>
-                    </mat-form-field>
-
-                </div>
-
-            </div>
-
-            <div class="bookname">
-                <div class="label">
-                    <mat-label>Description</mat-label>
-                </div>
-                <div>
-                    <mat-form-field appearance="outline">
-
-                        <input type="text" formControlName="description" matInput placeholder="">
-                        <mat-error>Enter a description</mat-error>
-                    </mat-form-field>
-
-                </div>
-
-            </div>
-
-            <div class="bookname">
-                <div class="label">
-                    <mat-label>Quantity</mat-label>
-                </div>
-                <div>
-                    <mat-form-field appearance="outline">
-
-                        <input type="text" formControlName="quantity" matInput placeholder="">
-                        <mat-error>Enter a quantity</mat-error>
-                    </mat-form-field>
-
-                </div>
-
-            </div>
-
-            <div class="bookname">
-                <div class="label">
-                    <mat-label>Price</mat-label>
-                </div>
-                <div>
-                    <mat-form-field appearance="outline">
-
-                        <input type="text" formControlName="price" matInput placeholder="">
-                        <mat-error>Enter a price</mat-error>
-                    </mat-form-field>
-
-                </div>
-
-            </div>
-
-            <div class="bookname">
-                <div class="label">
-                    <mat-label>Discount Price</mat-label>
-                </div>
-                <div>
-                    <mat-form-field appearance="outline">
-
-                        <input type="text" formControlName="discountprice" matInput placeholder="">
-                        <mat-error>Enter a discount price</mat-error>
-                    </mat-form-field>
-
-                </div>
-
-            </div>
-
-            <div>
-                <button  class="addbutton">Add book</button>
-                <!-- <button  class="addbutton">Update book</button> -->
-            </div>
-
-
-
-
-
-
-
-
-
+            </form>
 
         </div>
-    </form>
-
-</div>
-</mat-card>
+    </mat-card>
 </div>
