--- a/src/app/component/admin/admin.component.html
+++ b/src/app/component/admin/admin.component.html
@@ -1,37 +1,37 @@
-<div class="entiretable" fxLayout="column" fxLayoutAlign="center center">
-    <div class="addbookbutton" >
-        <button (click)="AddBook()" class="addbutton">Add book</button>
+<div class="entiretable" fxLayout="column" fxLayoutAlign="center center" fxLayout.sm="column" fxFlex.xs="95"
+    fxFlex.sm="60">
+    <div class="addbookbutton" fxLayout="column" fxLayout.sm="row" fxFlex.xs="95" fxFlex.sm="60">
+        <button mat-flat-button color="primary" (click)="AddBook()" class="addbutton">Add book</button>
     </div>
 
     <table class="table">
-        <tr>
+        <tr class="tableheading">
             <th>Sr.No</th>
             <th>BookImage</th>
             <th>BookName</th>
             <th>Author</th>
-            <th>description</th>
+            <!-- <th>description</th> -->
             <th>Price</th>
             <th>DiscountPrice</th>
             <th>Quantity</th>
             <th>Action</th>
         </tr>
-        <tr *ngFor="let book of allbooks" >
-            <td>{{count}}</td>
+        <tr *ngFor="let book of allbooks; index as i">
+            <td>{{i+1}}</td>
             <td> <img class="img1" src="../../../assets/Image 11@2x.png" alt=""></td>
             <td>{{book.bookName}}</td>
             <td>{{book.author}}</td>
-            <td>{{book.description}}</td>
+            <!-- <td>{{book.description}}</td> -->
             <td>{{book.price}}</td>
             <td>{{book.discountPrice}}</td>
             <td>{{book.quantity}}</td>
-            <td class="buttons" fxLayoutAlign="space-around center" fxLayout="row" fxLayoutGap="15px" >
-
-                <button (click)="UpdateBook(book)" class="updatebutton"> Update</button>
-                <button class="deletebutton">Delete</button>
+            <td class="buttons" fxLayoutAlign="space-around center" fxLayout="row" fxLayoutGap="15px">
+                <button  (click)="UpdateBook(book)" class="updatebutton"> Update</button>
+                <button (click)="deletebook(book)" class="deletebutton">Delete</button>
             </td>
-            
-           
-            
+
+
+
         </tr>
     </table>
 
