--- a/src/app/component/dashboard/dashboard.component.scss
+++ b/src/app/component/dashboard/dashboard.component.scss
@@ -95,7 +95,7 @@ p{
 ::ng-deep .mat-menu-panel.matmenu{
     // border: 1px solid red;
     width: 300px;
-    height: 175px;
+    height: 180px;
     position: relative;
     left: 150px;
     margin-top: -15px;
@@ -103,6 +103,7 @@ p{
 }
 .welcometext{
     margin-left: 15px;
+    color: black;
 
 }
 .logouttext{
