--- a/src/app/component/getallbooks/getallbooks.component.html
+++ b/src/app/component/getallbooks/getallbooks.component.html
@@ -75,8 +75,11 @@
 
     </div>
 
-    <div>
+    <!-- <div>
         <pagination-controls class="text-center my-pagination" (pageChange)="page = $event"></pagination-controls>
-    </div>
+    </div> -->
 
+</div>
+<div class="pagination" fxLayoutAlign="center center"> 
+    <pagination-controls class="text-center my-pagination" (pageChange)="page = $event"></pagination-controls>
 </div>
