--- a/src/app/component/admin-addandupdate/admin-addandupdate.component.scss
+++ b/src/app/component/admin-addandupdate/admin-addandupdate.component.scss
@@ -1,16 +1,22 @@
 .section{
     background-color: lightblue;
-    width: 380px;
-    height: 770px;
-    margin-left: 5px;
+    // width: 380px;
+    // height: 770px;
+    // margin-left: 5px;
     border-radius: 8px;
+
+
+    width: 600px;
+    height: 410px;
 }
 .matcard2{
     // border: 1px solid blue;
     background-color:#F5F5F5; 
     // margin-right: -20px;
-    height: 730px; 
-    width: 300px;
+
+    // height: 730px; 
+    // width: 300px;
+
     // padding-bottom: 10px; 
     display: flex; 
     position: relative;
@@ -18,15 +24,21 @@
     // left: 42%;
     // right: 3%;
     // margin-left: 40%;
-     margin-top: 6px;
+     margin-top: 2px;
      border-radius: 8px;
+
+
+     width: 550px;
+     height: 390px;
 }
 
 .addandupdatetext{
     // border: 1px solid red;
-     margin-top: -80px;
+
+    //  margin-top: -80px;
      position: relative;
-     top: -130px;
+
+    //  top: -130px;
 }
 
 .form{
@@ -34,10 +46,16 @@
     // position: relative;
     // right: 34%;
     // top: 12%;
-    width: 80%;
-    height: 450px;
+
+    // width: 80%;
+    // height: 450px;
+
     margin-left: 10px;
-    margin-top: -130px;
+
+    // margin-top: -130px;
+
+    width: 500px;
+    height: 300px;
 }
 .bookname{
     // border: 1px solid green;
@@ -50,5 +68,5 @@
     // border: 1px solid yellow;
 }
 .addbutton{
-    margin-left: 60px;
+    // margin-left: 60px;
 }
